<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <!-- match card bg -->
    <View
        android:id="@+id/match_card"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@drawable/ic_match_card_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />



    <!-- horizontal guideline at 59%
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fifty_nine_percent_guideline"
        android:layout_width="164dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent=".59"
        />
       -->

    <!-- vertical guideline at 65% -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/sixty_five_percent_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.65"
        android:orientation="vertical"
        />

    <!-- match venue -->
    <TextView
        android:id="@+id/match_venue"
        android:text="@string/match_venue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/team_flag_1"
        app:layout_constraintBottom_toTopOf="@id/team_flag_1"
        android:fontFamily="@font/euclidcircularregular"
        android:textAppearance="@style/match_venue"
        android:layout_marginBottom="22dp"
        />

    <!-- divider line -->
    <View
        android:id="@+id/vertical_divider_line"
        android:layout_width="1dp"
        android:layout_height="40dp"
        android:background="@drawable/vertical_line"
        app:layout_constraintTop_toTopOf="@id/match_card"
        app:layout_constraintBottom_toBottomOf="@id/match_card"
        app:layout_constraintLeft_toLeftOf="@id/sixty_five_percent_guideline"
        app:layout_constraintRight_toRightOf="@id/sixty_five_percent_guideline"
        app:layout_constraintVertical_bias="0.59"
        />


    <!-- match results -->
    <TextView
        android:id="@+id/match_results"
        android:text="@string/match_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        app:layout_constraintLeft_toLeftOf="@id/sixty_five_percent_guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/vertical_divider_line"
        app:layout_constraintBottom_toTopOf="@id/results_details"
        android:textAppearance="@style/match_results"
        />

    <!-- results details -->
    <TextView
        android:id="@+id/results_details"
        android:text="@string/results_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="110dp"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="@id/match_results"
        app:layout_constraintRight_toRightOf="@id/match_results"
        app:layout_constraintTop_toBottomOf="@id/match_results"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="@id/vertical_divider_line"
        android:textAppearance="@style/results_details"
        />

    <!-- flag 1 -->
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/team_flag_1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/vertical_divider_line"
        app:layout_constraintBottom_toTopOf="@id/team_flag_2"
        app:layout_constraintRight_toRightOf="@id/sixty_five_percent_guideline"
        app:layout_constraintHorizontal_bias="0.1"
        />

    <!-- flag 2 -->
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/team_flag_2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintRight_toRightOf="@id/sixty_five_percent_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/team_flag_1"
        app:layout_constraintBottom_toBottomOf="@id/vertical_divider_line"
        app:layout_constraintHorizontal_bias="0.1"
        android:layout_marginTop="4dp"
        />

    <!-- team 1 -->
    <TextView
        android:id="@+id/team_name_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/team_1"
        android:textAppearance="@style/team_name"
        app:layout_constraintBottom_toBottomOf="@id/team_flag_1"
        app:layout_constraintLeft_toRightOf="@id/team_flag_1"
        app:layout_constraintTop_toTopOf="@id/team_flag_1" />

    <!-- team 2 -->
    <TextView
        android:id="@+id/team_name_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:layout_marginLeft="8dp"
        android:text="@string/team_2"
        android:textAppearance="@style/team_name"
        app:layout_constraintBottom_toBottomOf="@id/team_flag_2"
        app:layout_constraintLeft_toRightOf="@id/team_flag_2"
        app:layout_constraintTop_toTopOf="@id/team_flag_2" />

    <!-- team 1 score -->
    <TextView
        android:id="@+id/team1score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="-2.5dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/team_1_score"
        android:textAppearance="@style/team1score"
        app:layout_constraintBottom_toBottomOf="@id/team_name_1"
        app:layout_constraintLeft_toRightOf="@id/team_name_1" />

    <!-- team 2 score -->
    <TextView
        android:id="@+id/team2score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="-2.5dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/team_2_score"
        android:textAppearance="@style/team2score"
        app:layout_constraintBottom_toBottomOf="@id/team_name_2"
        app:layout_constraintLeft_toRightOf="@id/team_name_2" />

    <!-- total overs 1 -->
    <TextView
        android:id="@+id/total_overs_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        app:layout_constraintLeft_toRightOf="@id/team1score"
        android:text="@string/total_overs_1"
        android:textAppearance="@style/total_overs_1"
        android:layout_marginLeft="4dp"
        app:layout_constraintBottom_toBottomOf="@id/team_name_1"
        />

    <!-- total overs 2 -->
    <TextView
        android:id="@+id/total_overs_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:layout_marginLeft="4dp"
        android:text="@string/total_overs_2"
        android:textAppearance="@style/total_overs_2"
        app:layout_constraintLeft_toRightOf="@id/team2score"
        app:layout_constraintBottom_toBottomOf="@id/team_name_2"
        />







</androidx.constraintlayout.widget.ConstraintLayout>